styling add button to align correctly

--- a/src/components/GalleryList/GalleryList.css
+++ b/src/components/GalleryList/GalleryList.css
@@ -50,7 +50,7 @@ h3 {
     height: 300px;
 }
 
-.imageHolder .descBox {
+.descBox {
     position: absolute;
     top: 0;
     left: 0;
@@ -62,7 +62,7 @@ h3 {
     /* filter: blur(5px); */
 }
 
-.imageHolder .descriptionText {
+.descriptionText {
     position: absolute;
     top: 30px;
     left: 30px;
@@ -72,7 +72,7 @@ h3 {
     filter: blur();
 }
 
-.imageHolder .likes {
+.likes {
     position: absolute;
     bottom: 0px;
     right: 15px;
